--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -42,7 +42,7 @@
         android:id="@+id/TextView3a2"
         android:layout_width="384dp"
         android:layout_height="56dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
         android:background="#8357DC"
         android:hint="Password"
         android:paddingLeft="26dp"
@@ -52,7 +52,7 @@
         android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/TextView2a2"
         tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp" />
+        tools:layout_editor_absoluteX="6dp" />
 
     <EditText
         android:id="@+id/TextView4a3"
@@ -84,6 +84,7 @@
         android:textSize="16dp"
         app:layout_constraintTop_toBottomOf="@+id/TextView4a3"
         tools:layout_editor_absoluteX="71dp"
+        android:onClick="doSignUp"
         tools:ignore="MissingConstraints" />
 
     <TextView
